--- a/libs/sparql2tensor/CMakeLists.txt
+++ b/libs/sparql2tensor/CMakeLists.txt
@@ -13,23 +13,22 @@ add_library(${lib}
         src/dice/sparql2tensor/parser/visitors/PrologueVisitor.cpp
         src/dice/sparql2tensor/parser/visitors/SelectAskQueryVisitor.cpp
         src/dice/sparql2tensor/SPARQLQuery.cpp
-)
-
+        src/dice/sparql2tensor/UPDATEQuery.cpp
+        )
 add_library(${PROJECT_NAME}::${lib_suffix} ALIAS ${lib})
 
 target_include_directories(${lib} PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
         PRIVATE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/private-include>
-        )
+        ${CMAKE_CURRENT_SOURCE_DIR}/private-include
+)
 
 target_link_libraries(${lib} PUBLIC
         ${PROJECT_NAME}::rdf-tensor
         robin_hood::robin_hood
         PRIVATE
         sparql-parser-base::sparql-parser-base
-        )
-
+)
 
 include(${CMAKE_SOURCE_DIR}/cmake/install_components.cmake)
 install_component(PUBLIC ${lib_suffix} src)
