--- a/libs/tentris/CMakeLists.txt
+++ b/libs/tentris/CMakeLists.txt
@@ -5,12 +5,12 @@ set(lib "${PROJECT_NAME}-${lib_suffix}")
 # Define the library
 add_library(${lib} INTERFACE)
 add_library(${PROJECT_NAME}::${lib_suffix} ALIAS ${lib})
-target_link_libraries(${lib} INTERFACE
-        ${PROJECT_NAME}::endpoint
-        )
 
 target_include_directories(${lib} INTERFACE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
+
+target_link_libraries(${lib} INTERFACE
+        ${PROJECT_NAME}::endpoint
         )
 
 include(${CMAKE_SOURCE_DIR}/cmake/install_components.cmake)
